# polystokes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
exec/: CMakeLists.txt  HDK_PolyStokes.C  HDK_PolyStokes.h  HDK_PolyStokesSolver.cpp  HDK_PolyStokesSolver.h  HDK_PolyStokesSolver_AssembleBlocks.cpp  HDK_PolyStokesSolver_AssembleSystem.cpp  HDK_PolyStokesSolver_Classifier.cpp  HDK_PolyStokesSolver_ConstructMatrixBlocks.cpp  HDK_PolyStokesSolver_Preconditioners.cpp
lib/: CMakeLists.txt
lib/include/: ApplyPressureStressMatrix.h  GridClassifier.h  Preconditioner.h  pcg.h  units.h  util.h
lib/src/: ApplyPressureStressMatrix.cpp  GridClassifier.cpp  Preconditioner.cpp
results/animations/viscous_beam_range/Adobe Premiere Pro Auto-Save/: compile_comparison_beams--8af6e2f3-0fb8-c559-61b5-81feb3be8b88-2023-07-27_03-55-04.prproj
scenes/armadillos/: render.blend
scenes/conveyor_belt/: conveyor_belt_render_octane.hipnc
scenes/conveyor_belt/texture/: texture_test_2.jfif
scenes/jelly_jam/reduced/: jam_jar.blend  jam_jar.mtl  jelly_jam.hipnc
scenes/jelly_jam/uniform/: jam_jar.blend1  jelly_jam.hipnc
scenes/octopus/assets/: octopus.blend  octopus.mtl  octopus.stl
